# cpp-submodules-test

./: CMakeLists.txt  README.md  func.cpp  func.h  main.cpp
src/sum/: CMakeLists.txt
src/sumlib/: CMakeLists.txt  func.cpp
tests/: CMakeLists.txt  tests_all.cpp
